--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
 						<label for="isbn">phone-number</Title></label>
 						<input type="text" id="isbn" class="form-control">
 					</div>
-					<div class="field">
+					<div class="form-group">
 						<label for="message">Message</label>
 						<textarea name="message" id="message" rows="4"></textarea>
 					</div><br>
